<resources>
    <string name="app_name">Talkingz App</string>
    <string name="title_activity_main">Talkingz App</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- Titles -->
    <string name="addContact">Adicionar Contato</string>

    <string name="talkingzNotificationChannel">TalkingzNotificationChannel</string>
    <string name="talkingzNotificationDescription">Canal para notificações do Talkingz</string>

    <!-- Labels -->
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="searchToken">Token de pesquisa</string>
    <string name="since">desde</string>
    <string name="saveAndSynchronize">Salvar e Sincronizar</string>
    <string name="userThumbnail">Foto do perfil</string>

    <!--Talkingz Strings -->
    <string name="item_removed">Item removido!</string>
    <string name="pronto">Pronto!</string>
    <string name="carregando_novo_usuario">Carregando novo usuário…</string>
    <string name="verificando_o_servico">Verificando o serviço…</string>
    <string name="verificando_conexao_internet">Verificando conexão com a Internet…</string>
    <string name="profile">Perfil</string>
    <string name="title_activity_nav_drawer">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Configurações</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
