<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.luisfga.talkingz.ui.TabsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_tabs"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="br.com.luisfga.talkingz.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="br.com.luisfga.talkingz.ui.profile.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>