<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.luisfga.talkingz.app.ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/person_8x10"
        android:scaleType="centerCrop"
        android:contentDescription="@string/userThumbnail" />
    <TextView
        android:id="@+id/nameLabel"
        android:layout_below="@id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" android:labelFor="@id/name"/>
    <EditText
        android:id="@+id/name"
        android:layout_below="@id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/emailLabel"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" android:labelFor="@id/email"/>
    <EditText
        android:id="@+id/email"
        android:layout_below="@id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/searchTokenLabel"
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchToken" android:labelFor="@+id/searchToken"/>
    <EditText
        android:id="@+id/searchToken"
        android:layout_below="@id/searchTokenLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/joinDateLabel"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_above="@id/joinDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/since"
        android:textAlignment="textEnd"/>
    <TextView
        android:id="@+id/joinDate"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_above="@id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveAndSynchronize"
        android:textAllCaps="false"
        android:layout_below="@id/searchToken"/>

</RelativeLayout>